parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function() { return parser.getResult();  },
      peg$c1 = function(edges) {return parser.registerEdges(edges);},
      peg$c2 = ",",
      peg$c3 = peg$literalExpectation(",", false),
      peg$c4 = /^[\n\r\u2028\u2029]/,
      peg$c5 = peg$classExpectation(["\n", "\r", "\u2028", "\u2029"], false, false),
      peg$c6 = "#",
      peg$c7 = peg$literalExpectation("#", false),
      peg$c8 = "->",
      peg$c9 = peg$literalExpectation("->", false),
      peg$c10 = function(x, y) { return [x,y]; },
      peg$c11 = function(x, proc, y) { return [{"tgt":makeInPort(proc, x)},{"src":makeOutPort(proc, y)}]; },
      peg$c12 = function(proc, port) { return {"src":makeOutPort(proc, port)} },
      peg$c13 = function(port, proc) { return {"tgt":makeInPort(proc, port)} },
      peg$c14 = "'",
      peg$c15 = peg$literalExpectation("'", false),
      peg$c16 = function(iip) { return {"data":iip.join("")} },
      peg$c17 = function(iip) { return {"data":iip} },
      peg$c18 = function(name) { return name},
      peg$c19 = /^[a-zA-Z_]/,
      peg$c20 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false),
      peg$c21 = /^[a-zA-Z0-9_\-]/,
      peg$c22 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "-"], false, false),
      peg$c23 = function(name) { return makeName(name)},
      peg$c24 = function(name, comp) { parser.addNode(name,comp); return name},
      peg$c25 = function(comp) { return parser.addAnonymousNode(comp, location().start.offset) },
      peg$c26 = "(",
      peg$c27 = peg$literalExpectation("(", false),
      peg$c28 = /^[a-zA-Z\/.@\-0-9_]/,
      peg$c29 = peg$classExpectation([["a", "z"], ["A", "Z"], "/", ".", "@", "-", ["0", "9"], "_"], false, false),
      peg$c30 = ")",
      peg$c31 = peg$literalExpectation(")", false),
      peg$c32 = function(comp, meta) { var o = {}; comp ? o.comp = comp.join("") : o.comp = ''; meta ? o.meta = meta : null; return o; },
      peg$c33 = function(meta) {return meta},
      peg$c34 = "@",
      peg$c35 = peg$literalExpectation("@", false),
      peg$c36 = /^[a-zA-Z0-9\-_]/,
      peg$c37 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "-", "_"], false, false),
      peg$c38 = /^[a-zA-Z0-9\-_ .]/,
      peg$c39 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "-", "_", " ", "."], false, false),
      peg$c40 = function(key, value) { return [key.join(''), value.join('')]; },
      peg$c41 = function(portname, portindex) {return { port: options.caseSensitive? portname : portname.toLowerCase(), index: portindex != null ? portindex : undefined }},
      peg$c42 = function(port) { return port; },
      peg$c43 = /^[A-Z]/,
      peg$c44 = peg$classExpectation([["A", "Z"]], false, false),
      peg$c45 = /^[A-Z.0-9_]/,
      peg$c46 = peg$classExpectation([["A", "Z"], ".", ["0", "9"], "_"], false, false),
      peg$c47 = function(portname) {return makeName(portname)},
      peg$c48 = "[",
      peg$c49 = peg$literalExpectation("[", false),
      peg$c50 = /^[0-9]/,
      peg$c51 = peg$classExpectation([["0", "9"]], false, false),
      peg$c52 = "]",
      peg$c53 = peg$literalExpectation("]", false),
      peg$c54 = function(portindex) {return parseInt(portindex.join(''))},
      peg$c55 = /^[^\n\r\u2028\u2029]/,
      peg$c56 = peg$classExpectation(["\n", "\r", "\u2028", "\u2029"], true, false),
      peg$c57 = /^[\\]/,
      peg$c58 = peg$classExpectation(["\\"], false, false),
      peg$c59 = /^[']/,
      peg$c60 = peg$classExpectation(["'"], false, false),
      peg$c61 = function() { return "'"; },
      peg$c62 = /^[^']/,
      peg$c63 = peg$classExpectation(["'"], true, false),
      peg$c64 = /^[ \t]/,
      peg$c65 = peg$classExpectation([" ", "\t"], false, false),
      peg$c66 = " ",
      peg$c67 = peg$literalExpectation(" ", false),
      peg$c68 = function(value) { return value; },
      peg$c69 = "{",
      peg$c70 = peg$literalExpectation("{", false),
      peg$c71 = "}",
      peg$c72 = peg$literalExpectation("}", false),
      peg$c73 = ":",
      peg$c74 = peg$literalExpectation(":", false),
      peg$c75 = peg$otherExpectation("whitespace"),
      peg$c76 = /^[ \t\n\r]/,
      peg$c77 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c78 = "false",
      peg$c79 = peg$literalExpectation("false", false),
      peg$c80 = function() { return false; },
      peg$c81 = "null",
      peg$c82 = peg$literalExpectation("null", false),
      peg$c83 = function() { return null;  },
      peg$c84 = "true",
      peg$c85 = peg$literalExpectation("true", false),
      peg$c86 = function() { return true;  },
      peg$c87 = function(head, m) { return m; },
      peg$c88 = function(head, tail) {
                var result = {}, i;

                result[head.name] = head.value;

                for (i = 0; i < tail.length; i++) {
                  result[tail[i].name] = tail[i].value;
                }

                return result;
              },
      peg$c89 = function(members) { return members !== null ? members: {}; },
      peg$c90 = function(name, value) {
              return { name: name, value: value };
            },
      peg$c91 = function(head, v) { return v; },
      peg$c92 = function(head, tail) { return [head].concat(tail); },
      peg$c93 = function(values) { return values !== null ? values : []; },
      peg$c94 = peg$otherExpectation("number"),
      peg$c95 = function() { return parseFloat(text()); },
      peg$c96 = ".",
      peg$c97 = peg$literalExpectation(".", false),
      peg$c98 = /^[1-9]/,
      peg$c99 = peg$classExpectation([["1", "9"]], false, false),
      peg$c100 = /^[eE]/,
      peg$c101 = peg$classExpectation(["e", "E"], false, false),
      peg$c102 = "-",
      peg$c103 = peg$literalExpectation("-", false),
      peg$c104 = "+",
      peg$c105 = peg$literalExpectation("+", false),
      peg$c106 = "0",
      peg$c107 = peg$literalExpectation("0", false),
      peg$c108 = peg$otherExpectation("string"),
      peg$c109 = function(chars) { return chars.join(""); },
      peg$c110 = "\"",
      peg$c111 = peg$literalExpectation("\"", false),
      peg$c112 = "\\",
      peg$c113 = peg$literalExpectation("\\", false),
      peg$c114 = "/",
      peg$c115 = peg$literalExpectation("/", false),
      peg$c116 = "b",
      peg$c117 = peg$literalExpectation("b", false),
      peg$c118 = function() { return "\b"; },
      peg$c119 = "f",
      peg$c120 = peg$literalExpectation("f", false),
      peg$c121 = function() { return "\f"; },
      peg$c122 = "n",
      peg$c123 = peg$literalExpectation("n", false),
      peg$c124 = function() { return "\n"; },
      peg$c125 = "r",
      peg$c126 = peg$literalExpectation("r", false),
      peg$c127 = function() { return "\r"; },
      peg$c128 = "t",
      peg$c129 = peg$literalExpectation("t", false),
      peg$c130 = function() { return "\t"; },
      peg$c131 = "u",
      peg$c132 = peg$literalExpectation("u", false),
      peg$c133 = function(digits) {
                  return String.fromCharCode(parseInt(digits, 16));
                },
      peg$c134 = function(sequence) { return sequence; },
      peg$c135 = /^[^\0-\x1F"\\]/,
      peg$c136 = peg$classExpectation([["\0", "\x1F"], "\"", "\\"], true, false),
      peg$c137 = /^[0-9a-f]/i,
      peg$c138 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseline();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseline();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseline() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parsecomment();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsenewline();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s1 = [s1, s2];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsenewline();
        if (s2 !== peg$FAILED) {
          s1 = [s1, s2];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parse_();
        if (s1 !== peg$FAILED) {
          s2 = peg$parseconnection();
          if (s2 !== peg$FAILED) {
            s3 = peg$parse_();
            if (s3 !== peg$FAILED) {
              s4 = peg$parseLineTerminator();
              if (s4 === peg$FAILED) {
                s4 = null;
              }
              if (s4 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c1(s2);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }
    }

    return s0;
  }

  function peg$parseLineTerminator() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 44) {
        s2 = peg$c2;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsecomment();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parsenewline();
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          if (s4 !== peg$FAILED) {
            s1 = [s1, s2, s3, s4];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsenewline() {
    var s0;

    if (peg$c4.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c5); }
    }

    return s0;
  }

  function peg$parsecomment() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 35) {
        s2 = peg$c6;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseanychar();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseanychar();
        }
        if (s3 !== peg$FAILED) {
          s1 = [s1, s2, s3];
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseconnection() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsesource();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c8) {
          s3 = peg$c8;
          peg$currPos += 2;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseconnection();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c10(s1, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parsedestination();
    }

    return s0;
  }

  function peg$parsesource() {
    var s0;

    s0 = peg$parsebridge();
    if (s0 === peg$FAILED) {
      s0 = peg$parseoutport();
      if (s0 === peg$FAILED) {
        s0 = peg$parseiip();
      }
    }

    return s0;
  }

  function peg$parsedestination() {
    var s0;

    s0 = peg$parseinport();
    if (s0 === peg$FAILED) {
      s0 = peg$parsebridge();
    }

    return s0;
  }

  function peg$parsebridge() {
    var s0, s1, s2, s3;
